# fastapi-template

./: .env.temp  Dockerfile  LICENSE.md  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  readme.md  requirements.txt
cms/v1/: routes.py  schemas.py
cms/videos/: crud.py  helpers.py  models.py  tasks.py
conf/: settings.py
conf/_celery/: app.py
conf/db/: database.py  dependencies.py
healthcheck/: routes.py
iam/routes/v1/: routes.py  schemas.py
iam/users/: crud.py  helpers.py  models.py
migrations/: env.py
migrations/versions/: b0deff199383_add_status_column_to_videos_table.py  d7c04eaeddff_table_created_for_videos.py  e0d0f6e50009_remove_username.py  e9282bdefc3d_add_file_column_to_videos_table.py  ffb6e4cf57e8_create_users_table.py
ops/k8s/apps/server/: deployment.yaml
ops/k8s/apps/workers/: deployment.yaml
ops/k8s/resources/configmaps/: app-config.yaml
ops/k8s/resources/pvcs/: mysql.yaml  rabbitmq.yaml
ops/k8s/resources/pvs/: mysql.yaml  rabbitmq.yaml
ops/k8s/scripts/: deploy.sh  validate.sh  validate_configmaps.sh  validate_deployments.sh  validate_services.sh
ops/k8s/services/mysql/: deployment.yaml
ops/k8s/services/rabbitmq/: deployment.yaml  service.yaml
ops/k8s/services/redis/: deployment.yaml
utils/auth/: session.py  user.py
